argo/argocd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  namespace: argocd
spec:
  selector:
    matchLabels:
      app: argocd-server
  replicas: 1
  template:
    metadata:
      labels:
        app: argocd-server
    spec:
      containers:
        - name: argocd-server
          image: argoproj/argocd:v2.6.7
          args: [--insecure]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-service
  namespace: argocd
spec:
  selector:
    app: argocd-server
  ports:
    - port: 80
      targetPort: 8080
